# GameExtSuite

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/game_enhancer/: data_accessor.h  frame_accessor.h  memory_layout_builder.h  memory_processor.h
src/game_enhancer/achis/: achievement.h  achievement_manager.h  conditions.h  progress_tracker.h
src/game_enhancer/backup/: backup_engine.h
src/game_enhancer/impl/: data_accessor.cpp  data_accessor.h  frame_accessor.cpp  frame_accessor.h  memory_processor.cpp  memory_processor.h  pointer_resolver.h
src/game_enhancer/impl/achis/: conditions.cpp
src/game_enhancer/impl/backup/: backup_engine.cpp  backup_engine.h
src/game_enhancer/impl/layout/: frame_memory_storage.cpp  frame_memory_storage.h  memory_layout_builder.cpp  memory_layout_builder.h
src/game_enhancer/utils/: serialization.h
test/: CMakeLists.txt
test/ge_tests/: CMakeLists.txt  ge_test.cpp  ge_test.h
test/ge_tests/d2/: achis.h  data.h  raw.h  stats.h  zone.h
test/ge_tests/d2/achievements/: base.h
test/ge_tests/d2/achievements/act1/: andariel_no_hit.h  andariel_no_leave.h  blood_raven_walk_distance.h  countess_gold_steal.h  leoric_last.h  smith_high_health.h  speedrun.h  test_persistance.h  tristram_clear.h
test/ge_tests/d2/achievements/act5/: no_catapult_hit.h
test/ge_tests/fixtures/: ge_fixture.cpp  ge_fixture.h
